ADD_SUBDIRECTORY(Runtime)
ADD_SUBDIRECTORY(Fiber)
ADD_SUBDIRECTORY(Coroutine)
ADD_SUBDIRECTORY(Future)
ADD_SUBDIRECTORY(Utils)
ADD_SUBDIRECTORY(Timers)
ADD_SUBDIRECTORY(Sync)

ADD_LIBRARY(Concurrency INTERFACE)

TARGET_LINK_LIBRARIES(Concurrency INTERFACE
  Sync
  Runtime
  Coroutine
  Fiber
  Future
  Utils
  Timers
)
