SET(TIMER_SOURCES
  TimerThread.cc
)

ADD_LIBRARY(Timers STATIC
  ${TIMER_SOURCES}
)

TARGET_SOURCES(Timers PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}/Duration.hpp
  ${CMAKE_CURRENT_SOURCE_DIR}/IScheduler.hpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SetTimer.hpp
  ${CMAKE_CURRENT_SOURCE_DIR}/TimerHandler.hpp
  ${CMAKE_CURRENT_SOURCE_DIR}/TimerQueue.hpp
  ${CMAKE_CURRENT_SOURCE_DIR}/TimerThread.hpp
)

TARGET_INCLUDE_DIRECTORIES(Timers PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)


TARGET_LINK_LIBRARIES(Timers PUBLIC
  Utils
  Sync
)
