ADD_LIBRARY(Utils INTERFACE)

TARGET_SOURCES(Utils INTERFACE
  Callback.hpp
  Renn.hpp
  Result.hpp
)


TARGET_LINK_LIBRARIES(Utils INTERFACE
  third_party_function2
)

TARGET_INCLUDE_DIRECTORIES(Utils INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:include/Utils>
)
